<resources>
    <string name="app_name">Bill Please</string>
    <string name="no_gst">No GST</string>
    <string name="gst">GST</string>
    <string name="no_svs">No SVS</string>
    <string name="svs">SVS</string>
    <string name="textviewSplit">TextView</string>
    <string name="textviewTotal">TextView</string>
    <string name="Reset">Reset</string>
    <string name="Split">Split</string>
    <string name="PayNow">PayNow</string>
    <string name="Cash">Cash</string>

</resources>